--- a/Income_balanced.ipynb
+++ b/Income_balanced.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Solve unbalanced class**\n",
+    "**Solve imbalanced class**\n",
     "24,1% of the dataset are labeled with income > 50K and 75,9% with income <= 50K by year."
    ]
   },
