--- a/Income_balanced.ipynb
+++ b/Income_balanced.ipynb
@@ -679,7 +679,7 @@
     "y=dataset['income'].values\n",
     "import seaborn as sns\n",
     "ax = sns.countplot(x=y)\n",
-    "#Class unbalanced"
+    "#Class imbalanced"
    ]
   },
   {
